fixing alignment for skills container for smaller devices

--- a/style/about.css
+++ b/style/about.css
@@ -539,7 +539,6 @@ body {
         width: 25%;
         height: auto;
         text-align: center;
-        position: relative;
         font-size: 20px;
         margin-top: 12%;
         margin-left: auto;
